# mpa

./: CMakeLists.txt  README.md  version.h.in
include/: mpacli.h  mpaknl.h  mpatype.h
src/: mpacli.c  mpaknl.c  version.c
tests/: mpaknl_test.c  puber.c  recver.c  sender.c
tools/: mpaadm.c  mqm.c  qnum.c
